# PaCHITA

./: .gitignore  CLAUDE.md  README.md  main.py  main_unsup.py  pyproject.toml
generator/: gen_anomalous_real_life_log.py
model/: compo.py  model.py
processmining/: miner.py
scripts/: generate_logs.sh  run.sh
utils/: dataset.py  eval.py
